[package]
name = "async-stream-http-tunnel-grader"
version = "0.1.4"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Asynchronous stream http tunnel grader."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/async-stream-http-tunnel-grader"
homepage = "https://github.com/bk-rs/async-stream-http-tunnel-grader"
documentation = "https://docs.rs/async-stream-http-tunnel-grader"
keywords = []
categories = ["asynchronous"]
readme = "README.md"

[features]
authorization = ["base64"]

unionable_client = []

async_http1_lite_client = ["authorization", "unionable_client", "async-http1-lite"]

[dependencies]
async-stream-packed = { version = "0.1", default-features = false, features = ["http"] }
futures-io = { version = "0.3", default-features = false, features = ["std"] }
async-trait = { version = "0.1", default-features = false, features = [] }

base64 = { version = "0.12", default-features = false, features = ["std"], optional = true }

async-http1-lite = { version = "0.1", default-features = false, features = [], optional = true }

[dev-dependencies]
futures-lite = { version = "0.1", default-features = false, features = [] }
async-net = { version = "0.1", default-features = false, features = [] }

[workspace]
members = [
    "demos/smol",
]
